feat: add test for followup-factory

--- a/package.json
+++ b/package.json
@@ -176,8 +176,9 @@
     "moduleNameMapper": {
       "@lib/(.*)": "<rootDir>/lib/$1",
       "@/(.*)": "<rootDir>/src/$1",
-      "(.+)\\.js": "$1",
-      "@root/(.*)": "<rootDir>/$1"
+      "^(?!.*currency\\.js)(.+)\\.js$": "$1",
+      "@root/(.*)": "<rootDir>/$1",
+      "@backend/(.*)": "<rootDir>/backend/$1"
     },
     "extensionsToTreatAsEsm": [
       ".ts"
