Remplacement du paramètre benefit par procedure

--- a/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
+++ b/data/benefits/javascript/departement_mayenne-aide-au-bafa-du-departement-de-la-mayenne.yml
@@ -32,5 +32,5 @@ link: https://www.lamayenne.fr/service/aide-pour-passer-le-bafa
 teleservice:
   name: redirection
   query:
-    vers: ds?benefit=cd53-bafa
+    vers: ds?procedure=cd53-bafa
 skip_schema_check: true
