update: ajoute le formatting css au hook de pre-commit

--- a/package.json
+++ b/package.json
@@ -192,7 +192,7 @@
     ]
   },
   "lint-staged": {
-    "*.(js|json|ts|vue|yaml)": "prettier --write",
+    "*.(css|js|json|ts|vue|yaml)": "prettier --write",
     "*.(js|ts|vue)": [
       "eslint  --max-warnings 0 --fix"
     ]
