--- a/package.json
+++ b/package.json
@@ -192,7 +192,9 @@
     ]
   },
   "lint-staged": {
-    "*.(css|js|json|ts|vue|yaml)": "prettier --write",
+    "*": [
+      "prettier --ignore-unknown --write"
+    ],
     "*.(js|ts|vue)": [
       "eslint  --max-warnings 0 --fix"
     ]
