Ajout code siren

--- a/data/institutions/mairie-de-montpellier.yml
+++ b/data/institutions/mairie-de-montpellier.yml
@@ -1,4 +1,4 @@
 name: Mairie de Montpellier
 imgSrc: img/institutions/logo_ville_montpellier.png
 type: Commune
-code_insee: "34172"
+code_siren: "213401722"
