--- a/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
@@ -20,7 +20,7 @@ conditions_generales:
 profils: []
 conditions:
   - Résider dans le Pas-de-Calais.
-  - Avoir obtenu son code de la route depuis moins de 3 mois.
+  - Avoir obtenu votre code de la route depuis moins de 3 mois.
 interestFlag: _interetPermisDeConduire
 type: float
 unit: €
