Reformate le code siren de la ville de Lille

--- a/data/institutions/ville-de-lille.yml
+++ b/data/institutions/ville-de-lille.yml
@@ -2,4 +2,4 @@ name: Ville de Lille
 imgSrc: img/institutions/logo_ville_de_lille.png
 type: Commune
 code_insee: "59350"
-code_siren: 215 903 501
+code_siren: "215903501"
