update: corrige le type invalides de certaines institutions

--- a/data/institutions/mairie-de-chaumes-en-retz.yml
+++ b/data/institutions/mairie-de-chaumes-en-retz.yml
@@ -1,5 +1,5 @@
 name: Mairie de Chaumes-en-Retz
 imgSrc: img/institutions/logo_ville_chaumes_en_retz.png
-type: Commune
+type: commune
 code_insee: "44005"
 code_siren: "200058121"
