--- a/data/institutions/ville_lille.yml
+++ b/data/institutions/ville_lille.yml
@@ -1,5 +1,5 @@
 name: Ville de Lille
 imgSrc: img/institutions/logo_ville_de_lille.png
-type: Commune
+type: commune
 code_insee: "59350"
 code_siren: "215903501"
