--- a/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/departement_pas_de_calais-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
@@ -1,7 +1,6 @@
 label: "Aide au financement du permis de conduire : Permis Citoyen"
 institution: departement_pas_de_calais
-description: >-
-  Le Permis citoyen, c’est 400 € pour financer son permis de conduire en
+description: Le Permis citoyen, c’est 400 € pour financer son permis de conduire en
   contrepartie d’un engagement citoyen bénévole de 35h auprès d’une association
   du Pas-de-Calais. 
 
@@ -28,4 +27,3 @@ periodicite: autre
 montant: 400
 link: https://www.jeunesdu62.fr/Ma-mobilite/Mesure-permis-engagement-citoyen
 teleservice: https://www.jeunesdu62.fr/Ma-mobilite/Mesure-permis-engagement-citoyen/Mesure-permis-engagement-citoyen-formulaire-de-demande
-form: ""
