update: ajoute un code insee à la ville de Montpellier

--- a/data/institutions/mairie-de-montpellier.yml
+++ b/data/institutions/mairie-de-montpellier.yml
@@ -1,4 +1,5 @@
 name: Mairie de Montpellier
 imgSrc: img/institutions/logo_montpellier.png
 type: commune
+code_insee: "34172"
 code_siren: "213401722"
