update: renomme les institutions mairie en ville

--- a/data/institutions/mairie-de-chaumes-en-retz.yml
+++ b/data/institutions/mairie-de-chaumes-en-retz.yml
@@ -1,4 +1,4 @@
-name: Mairie de Chaumes-en-Retz
+name: Ville de Chaumes-en-Retz
 imgSrc: img/institutions/logo_ville_chaumes_en_retz.png
 type: commune
 code_insee: "44005"
