--- a/data/institutions/mairie-de-montpellier.yml
+++ b/data/institutions/mairie-de-montpellier.yml
@@ -1,4 +1,4 @@
-name: Mairie de Montpellier
+name: Ville de Montpellier
 imgSrc: img/institutions/logo_montpellier.png
 type: commune
 code_insee: "34172"
