--- a/data/institutions/ville_montpellier.yml
+++ b/data/institutions/ville_montpellier.yml
@@ -1,4 +1,5 @@
-name: Mairie de Montpellier
+name: Ville de Montpellier
 imgSrc: img/institutions/logo_montpellier.png
-type: Commune
+type: commune
+code_insee: "34172"
 code_siren: "213401722"
