fix: inclus la ville de Lille après rename du fichier sur master

--- a/data/benefits/javascript/ville-de-lille-aide-au-financement-du-permis-de-conduire.yml
+++ b/data/benefits/javascript/ville-de-lille-aide-au-financement-du-permis-de-conduire.yml
@@ -1,5 +1,5 @@
 label: Aide au financement du permis de conduire
-institution: ville-de-lille
+institution: ville_lille
 description: Cette aide s’adresse aux Lillois et Lilloises en recherche active
   d’emploi, âgés de 18 à 25 ans (ou 30 ans s’il s’agit d’une création
   d’entreprise ou de son propre emploi) et non imposables sur le revenu. Si vous
