fix: utilise la bonne valeur pour référencer le type d'institution

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -914,7 +914,8 @@ collections:
         name: type
         widget: relation
         collection: institution_types
-        value_field: "{{name}}"
+        value_field: "{{slug}}"
+        display_fields: [name]
         search_fields: [slug, name]
       - label: Code INSEE
         hint: Pour les communes, départements, régions
