--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "pinia": "^2.0.16",
     "sib-api-v3-sdk": "^8.2.1",
     "smtp-tester": "^2.0.1",
