--- a/data/benefits/javascript/ville_nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/ville_nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
@@ -17,6 +17,7 @@ conditions:
   - Avoir préalablement réussi le code de la route.
   - S’engager à la réalisation de 30 heures de bénévolat dans un service public
     ou un organisme à but non lucratif.
+interestFlag: _interetPermisDeConduire
 type: float
 unit: €
 periodicite: autre
