Ajout de la contrainte géographique

--- a/data/benefits/javascript/ville_chaumes_en_retz-bourse-communale-au-permis-de-conduire-et-au-bsr.yml
+++ b/data/benefits/javascript/ville_chaumes_en_retz-bourse-communale-au-permis-de-conduire-et-au-bsr.yml
@@ -11,6 +11,10 @@ conditions_generales:
   - type: age
     operator: <=
     value: 25
+  - type: communes
+    values:
+      - "44320"
+      - "44680"
 profils: []
 conditions:
   - Avoir un projet scolaire ou professionnel.
