--- a/data/institutions/fonds-daction-sociale-du-travail-temporaire-fastt.yml
+++ b/data/institutions/fonds-daction-sociale-du-travail-temporaire-fastt.yml
@@ -1,4 +1,4 @@
 name: Fonds d'Action Sociale du Travail Temporaire (FASTT)
 imgSrc: img/institutions/logo_fastt.png
-type: Autre
+type: autre
 code_siren: "395379746"
