--- a/data/benefits/javascript/ville_nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/ville_nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
@@ -1,6 +1,6 @@
 label: "Bourse communale au permis de conduire : Permis Citoyen"
 institution: ville_nice
-description: Aide financière pour les jeunes niçois ne disposant pas de
+description: La Région propose une aide financière pour les jeunes niçois ne disposant pas de
   ressources personnelles ou familiales suffisantes et étant inscrits dans une
   démarche de formation ou d’emploi.
 prefix: la
