--- a/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-vehicule.yml
+++ b/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-vehicule.yml
@@ -6,7 +6,13 @@ description: Le service FASTT SOS Location de véhicule aide les intérimaires
   lieu de mission d'intérim.
 prefix: le
 conditions_generales: []
-profils: []
+profils:
+  - type: salarie
+    conditions: []
+  - type: independant
+    conditions: []
+  - type: chomeur
+    conditions: []
 conditions:
   - Avoir le statut de travailleur intérimaire au moment de la location et avoir
     le permis de conduire.
@@ -15,5 +21,5 @@ unit: €
 periodicite: ponctuelle
 legend: / jour
 montant: 10
-link: https://mes-aides.pole-emploi.fr/fonds-d-action-sociale-du-travail-temporairefastt/sos-location-de-vehicule
+link: https://www.fastt.org/deplacement/la-location-dun-vehicule
 teleservice: https://espace.fastt.org/Account/Login/Register
