--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -955,7 +955,7 @@ collections:
     delete: false
     editor:
       preview: false
-    slug: "{{name}}"
+    slug: "{{name | lowercase}}"
     extension: yml
     fields:
       - label: Nom de votre type d'institution
