--- a/data/benefits/javascript/ville-de-carcassonne-bourse-communale-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/ville-de-carcassonne-bourse-communale-au-permis-de-conduire.yml
@@ -18,8 +18,7 @@ conditions_generales:
     value: 25
 profils: []
 conditions:
-  - Effectuer la demande de bourse avant de vous inscrire à l'auto-école.
-  - Obtenir le code de la route.
+  - Effectuer la demande de bourse avant de vous inscrire à l'auto-école et obtenir le code de la route.
   - Réaliser 60 heures d'action bénévole dans une association basée à
     Carcassonne.
 interestFlag: _interetPermisDeConduire
