--- a/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-vehicule.yml
+++ b/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-vehicule.yml
@@ -2,11 +2,9 @@ label: SOS location de véhicule
 institution: fonds-daction-sociale-du-travail-temporaire-fastt
 description: Le service FASTT SOS Location de véhicule aide les intérimaires
   dans leurs déplacements en mission, à louer un véhicule à prix réduit (10 euros par jour maximum)
-  et pour une durée limitée (jusqu’à 60 jours par an) pour se rendre sur leur lieu de mission d'intérim.
-  La location comprend l’assistance et l’assurance responsabilité civile, vol et incendie avec l’application d’une franchise
-  (voir conditions avec le loueur partenaire).
+  et pour une durée limitée (jusqu’à 60 jours par an).
+  La location comprend l’assistance et l’assurance responsabilité civile, vol et incendie.
   L’assurance ne couvre pas les bris de glace et les usages professionnels (livraison ou autres).
-  Une caution peut aller jusqu’à 700 € maximum.
 prefix: le
 conditions_generales: []
 profils:
