fix: type `Commune` -> `commune`

--- a/data/institutions/ville-de-carcassonne.yml
+++ b/data/institutions/ville-de-carcassonne.yml
@@ -1,5 +1,5 @@
 name: Ville de Carcassonne
 imgSrc: img/institutions/logo_ville_de_carcassonne.png
-type: Commune
+type: commune
 code_insee: "11069"
 code_siren: "211100698"
