--- a/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-cyclomoteur.yml
+++ b/data/benefits/javascript/fonds-daction-sociale-du-travail-temporaire-fastt-sos-location-de-cyclomoteur.yml
@@ -1,10 +1,10 @@
 label: SOS location de cyclomoteur
 institution: fonds-daction-sociale-du-travail-temporaire-fastt
 description: Le service FASTT SOS Location de cyclomoteur aide les intérimaires
-  dans leurs déplacements en mission, à louer un cyclomoteur (scooters et mobylettes)
-  à prix réduit (3 euros par jour maximum), pour une durée limitée (jusqu’à 60 jours par an)
-  pour se rendre sur leur lieu de mission d'intérim.
-  L’assurance ne couvre pas les usages professionnels (livraison ou autres).
+  dans leurs déplacements entre le domicile et le lieu de travail,
+  en mettant à leur disposition une flotte de mobylettes et de scooters
+  à louer à prix réduit et pour une durée limitée à raison de 3€ par jour maximum et 60 jours de location maximum par an.
+  L’assurance du cyclomoteur ne couvre pas les usages professionnels.
 prefix: le
 conditions_generales: []
 profils:
