--- a/data/benefits/javascript/ville_nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/ville_nice-bourse-communale-au-permis-de-conduire-permis-citoyen.yml
@@ -1,9 +1,10 @@
 label: Bourse communale au permis de conduire - Permis Citoyen
 institution: ville_nice
 description:
-  La Région propose une aide financière pour les jeunes niçois ne disposant pas de
-  ressources personnelles ou familiales suffisantes et étant inscrits dans une
-  démarche de formation ou d’emploi.
+  La ville de Nice propose une aide financière pour les jeunes niçois âgés de 17 à 25 ans, ne disposant pas de
+  ressources personnelles ou familiales suffisantes et qui s'inscrivent dans une démarche de formation ou d’emploi. 
+  L’instruction des dossiers de candidature se fait au Point d’Accueil et d’Ecoute Jeunes de la Ville de Nice ou 
+  au sein de la Mission Locale Nice Cote d’Azur pour les jeunes déjà suivis.
 prefix: la
 conditions_generales:
   - type: age
