--- a/data/institutions/departement_cotes_d_armor.yml
+++ b/data/institutions/departement_cotes_d_armor.yml
@@ -1,4 +1,4 @@
-name: Côtes d'Armor
+name: Département des Côtes d'Armor
 imgSrc: img/institutions/logo_cd22.jpg
 prefix: des
 repository: france-local
