--- a/data/benefits/javascript/departement_landes-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/departement_landes-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
@@ -1,6 +1,6 @@
-label: "Aide au financement du permis de conduire : Permis citoyen"
+label: Aide au financement du permis de conduire : Permis citoyen
 institution: departement_landes
-description: Ce dispositif permet aux Landais âgés de 15 à 30 ans de financer
+description: Ce dispositif permet aux jeunes Landais de financer
   leur permis de conduire en contrepartie d’une mission bénévole de 40 heures
   réalisée dans une collectivité ou une association des Landes. Les demandes de
   bourse sont à effectuer en ligne.
