update: ré-ajoute des doubles-quotes

--- a/data/benefits/javascript/departement_landes-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/departement_landes-aide-au-financement-du-permis-de-conduire-permis-citoyen.yml
@@ -1,4 +1,4 @@
-label: Aide au financement du permis de conduire : Permis citoyen
+label: "Aide au financement du permis de conduire : Permis citoyen"
 institution: departement_landes
 description: Ce dispositif permet aux jeunes Landais de financer
   leur permis de conduire en contrepartie d’une mission bénévole de 40 heures
