update: ajoute un point manquant en fin de conditions

--- a/data/benefits/javascript/departement_charente_maritime-aide-departementale-au-permis-de-conduire.yml
+++ b/data/benefits/javascript/departement_charente_maritime-aide-departementale-au-permis-de-conduire.yml
@@ -24,7 +24,7 @@ conditions:
     d'aide aux jeunes).
   - "Etre engagé dans une mission bénévole de 40 à 50 heures auprès d’un
     organisme local à vocation sociale ou humanitaire (ex : Restos du Cœur,
-    Croix Rouge etc.)"
+    Croix Rouge etc.)."
 interestFlag: _interetPermisDeConduire
 type: float
 unit: €
