--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^2.1.0",
-    "@vue/vue3-jest": "^27.0.0",
+    "@vue/vue3-jest": "^29.2.4",
     "argparse": "^2.0.1",
     "concurrently": "^7.4.0",
     "cypress": "^10.8.0",
@@ -120,6 +120,7 @@
     "eslint-plugin-prettier-vue": "^3.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "husky": "^7.0.4",
+    "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -127,7 +128,7 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.5.1",
     "rollup-plugin-visualizer": "^5.8.2",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.8.3",
     "webpack": "^5.78.0",
     "webpack-bundle-analyzer": "^4.5.0"
@@ -157,19 +158,21 @@
     ],
     "transform": {
       "^.+\\.(js|jsx|mjs)$": "babel-jest",
-      "\\.tsx?$": "ts-jest",
-      "\\.vue$": "@vue/vue3-jest"
-    },
-    "globals": {
-      "ts-jest": {
-        "isolatedModules": true,
-        "useESM": true
-      },
-      "vue-jest": {
-        "compilerOptions": {
-          "propsDestructureTransform": true
+      "\\.tsx?$": [
+        "ts-jest",
+        {
+          "isolatedModules": true,
+          "useESM": true
         }
-      }
+      ],
+      "\\.vue$": [
+        "@vue/vue3-jest",
+        {
+          "compilerOptions": {
+            "propsDestructureTransform": true
+          }
+        }
+      ]
     },
     "transformIgnorePatterns": [
       "node_modules"
