--- a/data/benefits/javascript/ville-dangers-bourse-communale-pour-le-permis-de-conduire-permis-citoyen.yml
+++ b/data/benefits/javascript/ville-dangers-bourse-communale-pour-le-permis-de-conduire-permis-citoyen.yml
@@ -1,11 +1,8 @@
 label: "Bourse communale pour le permis de conduire : permis citoyen"
 institution: ville-dangers
-description: La ville d'Angers propose une aide financière au permis de conduire
-  B pour les jeunes Angevins ne disposant pas de ressources personnelles ou
-  familiales suffisantes et qui s'inscrivent dans une démarche de formation ou
-  d’emploi. L'aide est conditionnée à un apport personnel d’au moins 20% du
-  montant total du permis. L’instruction des demandes se fait au Centre
-  Communale d'Action Sociale de la ville d'Angers.
+description: La ville d'Angers propose une aide financière au permis B pour les jeunes Angevin·e·s ne disposant pas de ressources suffisantes et qui s'inscrivent dans une démarche de formation ou
+  d’emploi. L'aide est conditionnée à un apport personnel d’au moins 20% du montant total du permis. L’instruction des demandes se fait au Centre
+  Communale d'Action Sociale de la ville.
 prefix: la
 conditions_generales:
   - type: communes
@@ -35,9 +32,8 @@ profils:
     conditions: []
 conditions:
   - Résider à Angers depuis au moins une année de manière continue.
-  - Etre engagé dans un parcours d’insertion professionnelle.
-  - Etre inscrit dans une auto-école partenaire du CCAS.
-  - Participer à une journée obligatoire de sécurité routière.
+  - Etre engagé·e dans un parcours d’insertion professionnelle.
+  - Etre inscrit·e dans une auto-école partenaire du CCAS et participer à une journée obligatoire de sécurité routière.
   - S'engager à réaliser au moins 20 heures de bénévolat dans une association ou
     une collectivité.
 interestFlag: _interetPermisDeConduire
