--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,9 @@
     ],
     "@babel/preset-typescript"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-import-assertions"
+  ],
   "ignore": ["/node_modules/"]
 }
