Refacto etablissement into lieu
Supprime logs

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -792,7 +792,7 @@ fields:
     widget: hidden
   field_benefit_institution: &field_benefit_institution
     label: Référence aux institutions supervisant l'aide
-    name: etablissements
+    name: lieux
     widget: hidden
   field_benefit_set_to_zero_recently: &field_benefit_set_to_zero_recently
     label: L'aide OpenFisca a été remise à zéro récemment
@@ -937,8 +937,8 @@ collections:
         name: prefix
         widget: hidden
         required: false
-      - label: Etablissements
-        name: etablissements
+      - label: Lieux à proximité
+        name: lieux
         widget: hidden
         required: false
       - label: repository
