--- a/data/institutions/assurance_maladie.yml
+++ b/data/institutions/assurance_maladie.yml
@@ -1,6 +1,6 @@
 name: Assurance maladie
 imgSrc: img/institutions/logo_assurance_maladie.png
 type: national
-etablissements:
+lieux:
   - cpam
 code_siren: "180035024"
