--- a/data/institutions/caf.yml
+++ b/data/institutions/caf.yml
@@ -1,6 +1,6 @@
 name: Caisse d’allocations familiales
 imgSrc: img/institutions/logo_caf.png
 type: national
-etablissements:
+lieux:
   - caf
 code_siren: "180035065"
